ml-workshop-minio/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
#  namespace: ml-workshop
  name: minio-ml-workshop
  labels:
    helm.sh/chart: s3-server-0.0.1
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: min
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: min
  type: ClusterIP
  sessionAffinity: None
