ml-workshop-minio/base/minio-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
#  namespace: ml-workshop
  name: minio-ml-workshop
  labels:
    helm.sh/chart: s3-server-0.0.1
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: min
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: null
  subdomain: ''
  to:
    kind: Service
    name: minio-ml-workshop
    weight: 100
  port:
    targetPort: 33933
#  tls:
#    insecureEdgeTerminationPolicy: Redirect
#    termination: edge
  wildcardPolicy: None
